--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <meta name="description" content="SSSS International - GPS Spoofing gps spoof">
 <meta name="author" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="./SSSS Locator - Safe, stable analog locator_files/bootstrap.min.css" rel="stylesheet">
-<script src="./SSSS Locator - Safe, stable analog locator_files/jquery.min.js"></script>
+<link href="./files/bootstrap.min.css" rel="stylesheet">
+<script src="./files/jquery.min.js"></script>
 <title>SSSS Locator - Safe, stable analog locator</title>
 <style type="text/css">
 h1,
@@ -278,12 +278,12 @@ padding-left: 12px;
 }
 }
 </style>
-<link type="text/css" rel="stylesheet" charset="UTF-8" href="./SSSS Locator - Safe, stable analog locator_files/translateelement.css"></head>
+<link type="text/css" rel="stylesheet" charset="UTF-8" href="./files/translateelement.css"></head>
 <body style="cursor: url(&quot;undefined&quot;), default;">
 <header class="container">
 <div class="responsive intro-container">
 <div class="app-icon">
-<img alt="App icon" src="./SSSS Locator - Safe, stable analog locator_files/app-icon.png">
+<img alt="App icon" src="./files/app-icon.png">
 <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">SSSS locator</font></font></p><small><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Version: 3.7</font></font></small>
 </div>
 <div class="intro">
@@ -297,9 +297,9 @@ padding-left: 12px;
 </div>
 <div class="responsive iphone">
 <div class="iphone-screenshot">
-<img src="./SSSS Locator - Safe, stable analog locator_files/app-screenshot.png" alt="App screenshot">
+<img src="./files/app-screenshot.png" alt="App screenshot">
 </div>
-<img class="iphone-mask" src="./SSSS Locator - Safe, stable analog locator_files/iphone.png">
+<img class="iphone-mask" src="./files/iphone.png">
 </div>
 </header>
 <div class="container">
