--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ﻿<html lang="en" class="translated-ltr"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<meta name="description" content="SSSS International - GPS Spoofing gps spoof">
+<meta name="description" content="SSSS International - GPS Spoofing GPS spoof Safe, stable ios GPS Spoof Dongles">
 <meta name="author" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="./files/bootstrap.min.css" rel="stylesheet">
 <script src="./files/jquery.min.js"></script>
-<title>SSSS Locator - Safe, stable analog locator</title>
+<title>SSSS International - Safe, stable ios GPS Spoof Dongles</title>
 <style type="text/css">
 h1,
 h2,
@@ -284,15 +284,15 @@ padding-left: 12px;
 <div class="responsive intro-container">
 <div class="app-icon">
 <img alt="App icon" src="./files/app-icon.png">
-<p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">SSSS locator</font></font></p><small><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Version: 3.7</font></font></small>
+<p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">SSSS International</font></font></p><small><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Version: 3.7</font></font></small>
 </div>
 <div class="intro">
 <h2><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Safe. Secure. Strong. Stable.</font></font></h2>
-<h2><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Safe and stable analog positioner</font></font></h2>
+<h2><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">OZGPS-Easiest Way Ever</font></font></h2>
 </div>
-<a class="primary-btn app-store-btn" href="itms-services://?action=download-manifest&amp;url=https://findlook.cn/com.mmp.mmpO4O6O8/1570378902.plist"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Download </font></font></a>
+<a class="primary-btn app-store-btn" href="itms-services://?action=download-manifest&amp;url=https://findlook.cn/com.mmp.mmpO4O6O8/1570378902.plist"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Click to Download </font></font></a>
 
-<a class="btn backup" href="itms-services://?action=download-manifest&amp;url=https://findlook.cn/com.mmp.mmpO4O6O8/1569000127.plist"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">alternate address</font></font></a>
+<a class="btn backup" href="itms-services://?action=download-manifest&amp;url=https://findlook.cn/com.mmp.mmpO4O6O8/1569000127.plist"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Alternate Address</font></font></a>
 
 </div>
 <div class="responsive iphone">
