--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-﻿<html lang="en" class="translated-ltr"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+﻿<html lang="en" class="translated-ltr"><head>
+<meta name="google-site-verification" content="HjRv7KNzdnhc5rWG5TkixHjrsLaj6naepr-a6R4Dq7o" />
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="description" content="SSSS International - GPS Spoofing GPS spoof Safe, stable ios GPS Spoof Dongles">
 <meta name="author" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
