--- a/index.html
+++ b/index.html
@@ -329,7 +329,18 @@ Select the first icon in the upper right corner, move the map, or search for the
 3. This device supports iOS9.0 or above mobile phone, but there is insufficient support for 11.0.x system. If your mobile phone is 11.0.x, please upgrade to the latest system. </font></font><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
 4. If you have other questions during use, you can consult your sales representative.
 </font></font></p>
-</div>
+
+  <script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?3178732d290995bcfc08fcdc499bd252";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
+  </div>
 <div class="col-lg-6">
 <div class="input-group">
 <input id="agent-contact" type="text" class="form-control" placeholder="International Sales Inquiry">
