--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ padding-left: 12px;
 </div>
 <div class="responsive iphone">
 <div class="iphone-screenshot">
-<img src="./files/app-screenshot.png" alt="App screenshot">
+<img src="./files/app-screenshot.jpg" alt="App screenshot">
 </div>
 <img class="iphone-mask" src="./files/iphone.png">
 </div>
