--- a/index.html
+++ b/index.html
@@ -291,9 +291,9 @@ padding-left: 12px;
 <h2><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Safe. Secure. Strong. Stable.</font></font></h2>
 <h2><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">OZGPS-Easiest Way Ever</font></font></h2>
 </div>
-<a class="primary-btn app-store-btn" href="itms-services://?action=download-manifest&amp;url=https://findlook.cn/com.mmp.mmpO4O6O8/1570378902.plist"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Click to Download </font></font></a>
+<a class="primary-btn app-store-btn" href="https://wws.lanzous.com/iW3wnm8l7ra"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Click to Download </font></font></a>
 
-<a class="btn backup" href="itms-services://?action=download-manifest&amp;url=https://findlook.cn/com.mmp.mmpO4O6O8/1569000127.plist"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Alternate Address</font></font></a>
+<a class="btn backup" href="https://wws.lanzous.com/iW3wnm8l7ra"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Alternate Address</font></font></a>
 
 </div>
 <div class="responsive iphone">
